added refs and finished deutsch algo

--- a/content/Main-Notebooks/computation.ipynb
+++ b/content/Main-Notebooks/computation.ipynb
@@ -672,6 +672,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Refs - https://jeffe.cs.illinois.edu/teaching/algorithms/\n",
+    "\n",
+    "https://jeffe.cs.illinois.edu/teaching/algorithms/models/06-turing-machines.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Working Diagram of the Turing Machine "
    ]
   },
@@ -698,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -769,6 +778,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ref - https://github.com/ianmcloughlin/2223-S1-emerging-technologies/blob/main/notebooks/03-computation.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise 2: Change the above code to only accept inputs that do not contain any 1's."
    ]
   },
@@ -781,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
