--- a/content/Main-Notebooks/github-pages.ipynb
+++ b/content/Main-Notebooks/github-pages.ipynb
@@ -64,6 +64,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ref - https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***\n",
     "\n",
     "## GitHub Actions\n",
@@ -83,6 +90,13 @@
    "metadata": {},
    "source": [
     "There are many advantages to using GitHub Actions. These include, GitHub Actions can be used with many languages, some of these including Java, .NET, Python, Node.js and others. It has runners for all the main OS. Matrix workflows can test many operating systems at the same time, saving the user time. Live logs are available of the users workflow. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://github.com/features/actions"
    ]
   },
   {
@@ -115,6 +129,13 @@
    "metadata": {},
    "source": [
     "<img src=\"https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/images/HTTP.png\" align=\"center\" width=\"550\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Img Ref - https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/http_basics.html"
    ]
   },
   {
@@ -422,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Websites can be split into either Static or Dynamic websites. (https://www.geeksforgeeks.org/static-vs-dynamic-website/)\n",
+    "Websites can be split into either Static or Dynamic websites. \n",
     "\n",
     "Firstly, a static website is one which is returned to the server. No content is processed on the server and this sort of website is pretty fast as a result. They do not interact with databases and cannot be changed on the server, hence the name ‘static’ websites. They essentially have files containing prebuilt source codes. These files are built from HTML, JavaScript and CSS, all of which are considered to be easy languages. These sites are not expensive due to the fact that support server-side processing by a host with various languages is not needed."
    ]
@@ -445,6 +466,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ref - https://www.geeksforgeeks.org/static-vs-dynamic-website/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***\n",
     "\n",
     "## Exercise 1 - What is a Server?\n",
@@ -456,8 +484,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(https://www.computerhope.com/jargon/s/server.htm) \n",
-    "\n",
     "A software or hardware device which accepts and answers requests made and transferred over a network is known as a server. They are in charge of network resources. The client is the device making the requests and receiving the responses from the server. Servers can be created and used to do a various number of things, for example transferring emails, controlling access to networks or even hosting websites. Some servers can be known as dedicated servers, which are committed to one website or job, however majority of servers today are shared servers which have many things that they are responsible for such as email, many websites, DNS and FTP."
    ]
   },
@@ -509,6 +535,13 @@
    "source": [
     "#### Cloud Server: \n",
     "Cloud servers, or better known as cloud computing, control services over a network using a series of remote servers. This server has big, distributed storage and processing power which can be retrieved by Internet connected devices which are running a browser. It makes uploading and downloading information easy along with simplifying how information can be shared globally and locally. Examples today of various cloud servers include Adobe Creative Cloud, Google Docs, iCloud and Microsoft OneDrive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://www.computerhope.com/jargon/s/server.htm "
    ]
   },
   {
