--- a/content/Main-Notebooks/quantum-computing.ipynb
+++ b/content/Main-Notebooks/quantum-computing.ipynb
@@ -28,9 +28,7 @@
     "1. What is Quantum Computing and what is it useful for?\n",
     "2. Quantum Gates\n",
     "3. Deutsch Algorithm\n",
-    "4. Oracles and Random Oracles \n",
-    "5. Qiskit\n",
-    "6. Quantum Circuits"
+    "4. Oracles and Random Oracles"
    ]
   },
   {
@@ -110,6 +108,13 @@
    "metadata": {},
    "source": [
     "Some examples of quantum gates are the Pauli X, Y, Z gates and the Hadamard gate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://en.wikipedia.org/wiki/Quantum_logic_gate"
    ]
   },
   {
@@ -350,6 +355,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Refs - https://github.com/ianmcloughlin/2223-S1-emerging-technologies/blob/main/notebooks/05-quantum-computing.ipynb\n",
+    "https://en.wikipedia.org/wiki/Quantum_logic_gate#Pauli_gates_(X,Y,Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***\n",
     "\n",
     "## Deutsch Algorithm\n",
@@ -360,7 +373,291 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Deutsch algorithm was invented by David Deutsch in 1985. It was a quantum algorithm that demonstrated the power that quantum computers could potentially have compared to classical computers. It is an example of a black box algorithm, this means that it will take a fucntions as an input and determine whether the function is balanced or constant, without even knowing what the function is for or how it is implemented."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm works like this:\n",
+    "1. A function is inputted to the algorithm which takes a single bit and returns a single bit. The function can be either constant which means it will always return the same output or it could be balanced, which means it returns 0 half the time and 1 half the time.\n",
+    "2. The algorithm goes into a quantum state called superposition, this state is a linear combination of all possible inputs to the function.\n",
+    "3. The algorithm applies the function to the superposition using a quantum gate called the Oracle gate.\n",
+    "4. The algorithm measures the output of the function to determine whether it is constant or balanced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Deutsch algorithm can determine if a function is constant or balanced in just one evaluation, compared to a classical computer that might require two evaluations in the worst case. This demonstrates the potential of quantum computers to perform certain tasks more efficiently than classical computers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://qiskit.org/textbook/ch-algorithms/deutsch-jozsa.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1(x):\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f2(x):\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f3(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f4(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [f1, f2, f3, f4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = random.choice(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.f3(x)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0, 0),\n",
+       " (0, 0, 1),\n",
+       " (0, 1, 0),\n",
+       " (0, 1, 1),\n",
+       " (1, 0, 0),\n",
+       " (1, 0, 1),\n",
+       " (1, 1, 0),\n",
+       " (1, 1, 1)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(itertools.product([0,1], repeat=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0), (0, 1), (1, 0), (1, 1)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(itertools.product([0,1], repeat=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_f():\n",
+    "    possible_Ls = list(itertools.product([0,1], repeat=2))\n",
+    "    L = random.choice(possible_Ls)\n",
+    "    def f(x):\n",
+    "        return L[x]\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = random_f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://github.com/ianmcloughlin/2223-S1-emerging-technologies/blob/main/notebooks/05-quantum-computing.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,31 +681,8 @@
    "source": [
     "***\n",
     "\n",
-    "## Qiskit\n",
-    "\n",
-    "***"
+    "## End of Notebook"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***\n",
-    "\n",
-    "## Quantum Circuits\n",
-    "\n",
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
